css/style.css
body {
  padding-top: 50px;
}
.starter-template {
  padding: 40px 15px;
  text-align: center;
}

table.dataTable tr.odd {
  background-color:#E3E3E3;
}

table.dataTable tr {
  cursor: pointer !important;
}
.fav {
  background-color: #ffffc5 !important;
}
.top-40 {
  margin-top:40px;
}

